fix grid overlapping div

--- a/css/general.css
+++ b/css/general.css
@@ -1,8 +1,5 @@
 body {
 	font-family: Gadugi;
-	margin: 0;
-	border: 0;
-	padding: 0;
 }
 
 h1, h2, h3 {
@@ -32,13 +29,6 @@ h1 {
 
 p, ul, li {
 	font-size: 20px;
-}
-
-.photocaption {
-	font-size: 5;
-	margin: 0;
-	margin-top: -12px;
-	text-align: left;
 }
 
 details {
