--- a/css/trips.css
+++ b/css/trips.css
@@ -1,7 +1,7 @@
 .gallery {
-	grid-template-columns: repeat(3, 1fr); 
+	grid-template-columns: repeat(3, 32.675%);
 	display: grid;
-	grid-gap: 1.25%;
+	grid-gap: 0.625vw 1.25%;
 }
 
 .gallery .gallerylabel {
